--- a/src/index.css
+++ b/src/index.css
@@ -43,17 +43,17 @@
 .gradientOne {
   background: linear-gradient(
     90deg,
-    hsla(191, 75%, 60%, 1) 0%,
-    hsla(248, 87%, 36%, 1) 100%
+    rgb(44, 141, 162) 0%,
+    rgb(24, 9, 124) 100%
   );
 }
 .gradientTwo {
   background: linear-gradient(235deg, #ffffff 0%, #000f25 100%),
-    linear-gradient(180deg, #6100ff 0%, #000000 100%),
+    linear-gradient(180deg, #41138a 0%, #000000 100%),
     linear-gradient(
       235deg,
-      #ffa3ac 0%,
-      #ffa3ac 40%,
+      #56373a 0%,
+      #56373a 40%,
       #00043c calc(40% + 1px),
       #00043c 60%,
       #005d6c calc(60% + 1px),
@@ -63,8 +63,8 @@
     ),
     linear-gradient(
       125deg,
-      #ffa3ac 0%,
-      #ffa3ac 40%,
+      #56373a 0%,
+      #56373a 40%,
       #00043c calc(40% + 1px),
       #00043c 60%,
       #005d6c calc(60% + 1px),
